force-app/main/default/objects/Chit_Groups__c/Chit_Groups__c.object-meta.xml
<CustomObject>
    <label>Chit Group</label>
    <nameField>
        <label>Chit Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Chit Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>