force-app/main/default/objects/Chit_Groups__c/fields/Active_Chit_Members__c.field-meta.xml
<CustomField>
    <fullName>Active_Chit_Members__c</fullName>
    <label>Active Chit Members</label>
    <summaryForeignKey>Chit_Group_Members__c.Chit_Group_Name__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>