force-app/main/default/objects/Chit_Groups__c/fields/Chit_Duration_in_months__c.field-meta.xml
<CustomField>
    <fullName>Chit_Duration_in_months__c</fullName>
    <label>Chit Duration in months</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>