force-app/main/default/objects/Chit_Groups__c/fields/Chit_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Chit_End_Date__c</fullName>
    <formula>ADDMONTHS(Chit_Start_Date__c, Chit_Duration_in_months__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Chit End Date</label>
    <type>Date</type>
</CustomField>