force-app/main/default/objects/Chit_Groups__c/fields/Chit_Members_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Chit_Members_Capacity__c</fullName>
    <label>Chit Members Capacity</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>