force-app/main/default/objects/Chit_Groups__c/fields/Chit_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Chit_Start_Date__c</fullName>
    <label>Chit Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>