force-app/main/default/objects/Chit_Groups__c/fields/Chit_Value__c.field-meta.xml
<CustomField>
    <fullName>Chit_Value__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Chit Value</label>
    <referenceTo>Chit__c</referenceTo>
    <relationshipLabel>Chit Groups</relationshipLabel>
    <relationshipName>Chit_Group_Name</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>