force-app/main/default/objects/Chit_Groups__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Name</label>
    <referenceTo>Chit_Customer__c</referenceTo>
    <relationshipLabel>Chit Groups</relationshipLabel>
    <relationshipName>Chit_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>