force-app/main/default/objects/Chit_Groups__c/fields/Selected_Chit_Customers__c.field-meta.xml
<CustomField>
    <fullName>Selected_Chit_Customers__c</fullName>
    <label>Selected Chit Customers</label>
    <length>131071</length>
    <type>LongTextArea</type>
</CustomField>