force-app/main/default/objects/Chit_Groups__c/validationRules/Active_Chit_members_VR.validationRule-meta.xml
<ValidationRule>
    <fullName>Active_Chit_members_VR</fullName>
    <active>true</active>
    <errorConditionFormula>Active_Chit_Members__c &gt;   Chit_Members_Capacity__c</errorConditionFormula>
    <errorMessage>Chit members slots are full</errorMessage>
</ValidationRule>