force-app/main/default/objects/Chit_Groups__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Chit_Value__c</columns>
    <columns>Chit_Start_Date__c</columns>
    <columns>Active_Chit_Members__c</columns>
    <columns>Chit_Members_Capacity__c</columns>
    <columns>Chit_Duration_in_months__c</columns>
    <columns>Chit_End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>